--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
               <a class="link nav-list_link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list_item">
-              <a class="link nav-list_link" href="./portfolio.html"
+              <a class="link nav-list_link current" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
