--- a/portfolio.html
+++ b/portfolio.html
@@ -87,11 +87,18 @@
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a href="" class="link portfolio-link">
-                <img
-                  width="360"
-                  src="./images/portfolio/banking.jpeg"
-                  alt="Banking App Interface Concept"
-                  class="porfolio-img" />
+                <div class="portfolio-img-wrapper">
+                  <img
+                    width="360"
+                    src="./images/portfolio/banking.jpeg"
+                    alt="Banking App Interface Concept"
+                    class="porfolio-img" />
+                  <p class="portfolio-description">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-data">
                   <h2 class="portfolio-subtitle">
                     Banking App Interface Concept
@@ -102,11 +109,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link portfolio-link">
-                <img
-                  width="360"
-                  src="./images/portfolio/payment.jpeg"
-                  alt="Cashless Payment"
-                  class="porfolio-img" />
+                <div class="portfolio-img-wrapper">
+                  <img
+                    width="360"
+                    src="./images/portfolio/payment.jpeg"
+                    alt="Cashless Payment"
+                    class="porfolio-img" />
+                  <p class="portfolio-description">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-data">
                   <h2 class="portfolio-subtitle">Cashless Payment</h2>
                   <p class="portfolio-content">Marketing</p>
@@ -115,11 +129,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link portfolio-link">
-                <img
-                  width="360"
-                  src="./images/portfolio/app.jpeg"
-                  alt="Ресторан Seafood"
-                  class="porfolio-img" />
+                <div class="portfolio-img-wrapper">
+                  <img
+                    width="360"
+                    src="./images/portfolio/app.jpeg"
+                    alt="Ресторан Seafood"
+                    class="porfolio-img" />
+                  <p class="portfolio-description">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-data">
                   <h2 class="portfolio-subtitle">Meditation App</h2>
                   <p class="portfolio-content">App</p>
@@ -128,11 +149,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link portfolio-link">
-                <img
-                  width="360"
-                  src="./images/portfolio/taxi.jpeg"
-                  alt="Taxi Service"
-                  class="porfolio-img" />
+                <div class="portfolio-img-wrapper">
+                  <img
+                    width="360"
+                    src="./images/portfolio/taxi.jpeg"
+                    alt="Taxi Service"
+                    class="porfolio-img" />
+                  <p class="portfolio-description">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-data">
                   <h2 class="portfolio-subtitle">Taxi Service</h2>
                   <p class="portfolio-content">Marketing</p>
@@ -141,11 +169,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link portfolio-link">
-                <img
-                  width="360"
-                  src="./images/portfolio/screen.jpeg"
-                  alt="Screen Illustrations"
-                  class="porfolio-img" />
+                <div class="portfolio-img-wrapper">
+                  <img
+                    width="360"
+                    src="./images/portfolio/screen.jpeg"
+                    alt="Screen Illustrations"
+                    class="porfolio-img" />
+                  <p class="portfolio-description">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-data">
                   <h2 class="portfolio-subtitle">Screen Illustrations</h2>
                   <p class="portfolio-content">Design</p>
@@ -154,11 +189,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link portfolio-link">
-                <img
-                  width="360"
-                  src="./images/portfolio/courses.jpeg"
-                  alt="Online Courses"
-                  class="porfolio-img" />
+                <div class="portfolio-img-wrapper">
+                  <img
+                    width="360"
+                    src="./images/portfolio/courses.jpeg"
+                    alt="Online Courses"
+                    class="porfolio-img" />
+                  <p class="portfolio-description">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-data">
                   <h2 class="portfolio-subtitle">Online Courses</h2>
                   <p class="portfolio-content">Marketing</p>
@@ -167,11 +209,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link portfolio-link">
-                <img
-                  width="360"
-                  src="./images/portfolio/stories.jpeg"
-                  alt="Instagram Stories Concept"
-                  class="porfolio-img" />
+                <div class="portfolio-img-wrapper">
+                  <img
+                    width="360"
+                    src="./images/portfolio/stories.jpeg"
+                    alt="Instagram Stories Concept"
+                    class="porfolio-img" />
+                  <p class="portfolio-description">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-data">
                   <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
                   <p class="portfolio-content">Design</p>
@@ -180,11 +229,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link portfolio-link">
-                <img
-                  width="360"
-                  src="./images/portfolio/food.jpeg"
-                  alt="Organic Food"
-                  class="porfolio-img" />
+                <div class="portfolio-img-wrapper">
+                  <img
+                    width="360"
+                    src="./images/portfolio/food.jpeg"
+                    alt="Organic Food"
+                    class="porfolio-img" />
+                  <p class="portfolio-description">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-data">
                   <h2 class="portfolio-subtitle">Organic Food</h2>
                   <p class="portfolio-content">Web Site</p>
@@ -193,11 +249,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link portfolio-link">
-                <img
-                  width="360"
-                  src="./images/portfolio/coffee.jpeg"
-                  alt="Fresh Coffee"
-                  class="porfolio-img" />
+                <div class="portfolio-img-wrapper">
+                  <img
+                    width="360"
+                    src="./images/portfolio/coffee.jpeg"
+                    alt="Fresh Coffee"
+                    class="porfolio-img" />
+                  <p class="portfolio-description">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-data">
                   <h2 class="portfolio-subtitle">Fresh Coffee</h2>
                   <p class="portfolio-content">Web Site</p>
@@ -212,14 +275,49 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <div class="container">
-        <a class="logo link logo-link-footer" href="./index.html"
-          >Web<span class="logo_footer">Studio</span></a
-        >
-        <p class="footer-slogan">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-wrapper">
+        <div class="footer-data">
+          <a class="logo link logo-link-footer" href="./index.html"
+            >Web<span class="logo_footer">Studio</span></a
+          >
+          <p class="footer-slogan">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-meta">
+          <p class="footer-social-title">Social media</p>
+          <ul class="list footer-social-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-social-link">
+                <svg class="footer-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
